--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -31,7 +31,7 @@ body {
   font-size: 1rem;
 }
 
-.signUp {
+.signIn {
   background-color: rgba(160, 167, 224, 0.72);
   padding: 0 15px;
   text-align: center;
