--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -26,6 +26,7 @@ body {
   font-size: 1.3rem;
 }
 
+/* These are not needed 
 .topText {
   margin: 3rem 3rem;
 }
@@ -35,8 +36,9 @@ body {
 }
 
 .topText p {
-  font-size: 1rem;
+  font-size: 5rem;
 }
+  */
 
 .header p:hover,
 .joinButton p:hover,
