--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -9,8 +9,8 @@ html, body {
 
 body {
   font-family: "Alata", sans-serif;
-  background-color: #2c3050;
-  color: white;
+  background-color: #F8F8F8;
+  color: #2E2B2B;
   margin: 0;
   padding: 0;
 }
@@ -28,7 +28,7 @@ body {
 .header p:hover,
 .joinButton p:hover,
 .signUp p:hover {
-  text-shadow: 0 0 10px rgba(255, 114, 48, 0.8);
+  text-shadow: 0 0 10px rgba(155, 33, 33, 0.8);
   transition: text-shadow 0.2s ease-in-out;
 }
 
@@ -41,7 +41,7 @@ body {
 }
 
 .tabs p {
-  color: #ff7230;
+  color: #9B2121;
   text-align: center;
 }
 
@@ -80,7 +80,7 @@ body {
 .tab1 p:hover,
 .tab2 p:hover,
 .tab3 p:hover {
-  text-shadow: 0 0 10px rgba(255, 114, 48, 0.8);
+  text-shadow: 0 0 10px rgba(155, 33, 33, 0.8);
   transition: text-shadow 0.2s ease-in-out;
 }
 
@@ -94,12 +94,12 @@ body {
 
 .tab-content {
   padding: 20px;
-  background-color: rgba(160, 167, 224, 0.4);
+  background-color: rgba(46, 43, 43, 0.5);
   text-align: center;
 }
 
 .active-tab {
-  background-color: rgba(160, 167, 224, 0.4);
+  background-color: rgba(46, 43, 43, 0.5);
 }
 
 .eventCards {
@@ -110,7 +110,8 @@ body {
 }
 
 .eventCards > div {
-  background-color: #ffece3;
+  background-color: rgba(46, 43, 43, 0.5);
+  color: #FFFFFF;
   margin: 2rem;
   margin-bottom: 2rem;
   font-size: 30px;
@@ -182,7 +183,8 @@ body {
 }
 
 footer {
-  background-color: #ff7230;
+  background-color: #9B2121;
+  color: #FFFFFF;
   width: 100%;
   min-height: 100px;
   display: flex;
